BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Contract_Description_HCPTS__c.object
<CustomObject>
    <description>Stores Contract Descriptions for BMS Contracts</description>
    <fields>
        <fullName>Contract_HCPTS__c</fullName>
        <description>Parent Contract object</description>
        <inlineHelpText>Parent Contract object</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract_vod__c</referenceTo>
        <relationshipLabel>Contract Descriptions</relationshipLabel>
        <relationshipName>Contract_Descriptions_HCPTS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_Subtype_Formula_HCPTS__c</fullName>
        <formula>TEXT(Service_HCPTS__r.Service_Subtype__c)</formula>
        <label>Contract Subtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type_Formula_HCPTS__c</fullName>
        <formula>TEXT(Service_HCPTS__r.Service_Type_HCPTS__c)</formula>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id_HCPTS__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service_Description_HCPTS__c</fullName>
        <description>Please enter free text description for this service which maybe more appropriate for the Activity and/or situation</description>
        <inlineHelpText>Please enter free text description for this service which maybe more appropriate for the Activity and/or situation</inlineHelpText>
        <label>Contract Description Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_HCPTS__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the Service</description>
        <inlineHelpText>Lookup to the Service</inlineHelpText>
        <label>Lookup Contract Description</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EM_Catalog_vod__c.Category_HCPTS__c</field>
                <operation>equals</operation>
                <value>Contract Description, Other</value>
            </filterItems>
            <infoMessage>Returns records where Category is &quot;Contract Description&quot;</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EM_Catalog_vod__c</referenceTo>
        <relationshipLabel>Contract Descriptions</relationshipLabel>
        <relationshipName>Contract_Descriptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Name_HCPTS__c</fullName>
        <formula>Service_HCPTS__r.Name_vod__c</formula>
        <label>Contract Description Name</label>
        <type>Text</type>
    </fields>
    <label>Contract Description</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contract_HCPTS__c</columns>
        <columns>Service_Name_HCPTS__c</columns>
        <columns>Contract_Type_Formula_HCPTS__c</columns>
        <columns>Contract_Subtype_Formula_HCPTS__c</columns>
        <columns>External_Id_HCPTS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Contract Description ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Descriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contract_Type_Subtype_Must_Match</fullName>
        <active>false</active>
        <errorConditionFormula>TEXT(Contract_HCPTS__r.Service_Type_HCPTS__c) !=  TEXT(Service_HCPTS__r.Service_Type_HCPTS__c)</errorConditionFormula>
        <errorDisplayField>Service_HCPTS__c</errorDisplayField>
        <errorMessage>Contract Type and/or Subtype on Contract Description does not match with values on Contract</errorMessage>
    </validationRules>
</CustomObject>